v2.3.1
* Updated README to reflect changes in the priority of config paths

v2.3.0 - Released 2022-11-25
This is the first official release of this package so everything is new.